view 구현하는 중 navigation drawar customizing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,25 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.home.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity">
+        </activity>
+        <activity android:name=".view.login.LoginActivity">
+        </activity>
+        <activity android:name=".view.login.KbLoginActivity">
+        </activity>
+        <activity android:name=".view.sign.KbSignActivity">
+        </activity>
+        <activity
+                android:name=".view.SplashActivity"
+                android:label="@string/title_activity_home"
+                android:theme="@style/AppTheme">
         </activity>
     </application>
 
