--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'org.jetbrains.anko:anko:0.10.7'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
 }
