--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="app.woovictory.liiv_live">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
-
             android:theme="@style/AppTheme">
         <activity android:name=".view.home.HomeActivity">
             <intent-filter>
@@ -28,6 +29,16 @@
                 android:name=".view.SplashActivity"
                 android:label="@string/title_activity_home"
                 android:theme="@style/AppTheme">
+        </activity>
+        <activity android:name=".view.check.CheckActivity">
+        </activity>
+        <activity android:name=".view.quiz.QuizReviewActivity">
+        </activity>
+        <activity android:name=".view.survey.SurveyActivity">
+        </activity>
+        <activity android:name=".view.ExamActivity">
+        </activity>
+        <activity android:name=".view.pointree.PointreeHistoryActivity">
         </activity>
     </application>
 
