--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,10 @@
         </activity>
         <activity android:name=".view.mypage.MypageActivity">
         </activity>
+        <activity android:name=".view.exchange.ExchageActivity">
+        </activity>
+        <activity android:name=".view.stock.StockAndFundActivity">
+        </activity>
     </application>
 
 </manifest>
