--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,8 @@
         </activity>
         <activity android:name=".view.stock.StockAndFundActivity">
         </activity>
+        <activity android:name=".view.coupon.CouponShopActivity">
+        </activity>
     </application>
 
 </manifest>
