--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
         </activity>
         <activity android:name=".view.coupon.CouponShopActivity">
         </activity>
+        <activity android:name=".view.coupon.CouponCoffeeActivity">
+        </activity>
     </application>
 
 </manifest>
