--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+            android:name=".Network.ApplicationController"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -49,6 +50,8 @@
         <activity android:name=".view.coupon.CouponShopActivity">
         </activity>
         <activity android:name=".view.coupon.CouponCoffeeActivity">
+        </activity>
+        <activity android:name=".view.live.LiveActivity">
         </activity>
     </application>
 
