--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:theme="@style/AppTheme">
-        <activity android:name=".view.login.LoginActivity">
+        <activity android:name=".view.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -27,7 +27,7 @@
         <activity android:name=".view.sign.KbSignActivity">
         </activity>
         <activity
-                android:name=".view.SplashActivity"
+                android:name=".view.login.LoginActivity"
                 android:label="@string/title_activity_home"
                 android:theme="@style/AppTheme">
         </activity>
