--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:theme="@style/AppTheme">
+
         <!-- Firebase Service -->
         <service
                 android:name=".fcm.FirebaseMessagingService"
@@ -29,8 +30,8 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
-        <activity android:name=".view.SplashActivity">
 
+        <activity android:name=".view.SplashActivity">
         </activity>
         <activity android:name=".MainActivity">
         </activity>
@@ -73,16 +74,19 @@
         <activity android:name=".view.live.LiveActivity">
         </activity>
         <activity
-
-                android:name="SOSPopupActivity"
-
+                android:name=".SOSPopupActivity"
                 android:launchMode="singleInstance"
-
                 android:screenOrientation="portrait"
-                android:theme="@style/Theme.Transparent"
-        >
-
-    </activity>
+                android:theme="@style/Theme.Transparent">
+        </activity>
+        <activity
+                android:name=".SurveyCompletePopUpActivity"
+                android:launchMode="singleInstance"
+                android:screenOrientation="portrait"
+                android:theme="@style/Theme.Transparent">
+        </activity>
+        <activity android:name=".view.quiz.QuizActivity">
+        </activity>
     </application>
 
 </manifest>
