--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,11 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    /*implementation 'com.github.bumptech.glide:glide:4.8.0'*/
     implementation 'com.google.firebase:firebase-core:11.8.0'
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+
 
 //1b16f82b298c5b890339fe04bf29822cbcb7585d
 }
