--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:11.8.0'
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-
+    implementation 'com.sendbird.sdk:sendbird-android-sdk:3.0.80'
+    implementation 'org.jsoup:jsoup:1.11.2'
+    implementation 'com.dinuscxj:circleprogressbar:1.1.1'
+    implementation 'com.github.stfalcon:multiimageview:0.1'
 
 //1b16f82b298c5b890339fe04bf29822cbcb7585d
 }
