add image files, check activity 구현. 라이브 화면에서 X 버튼 눌렀을 때 팝업 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,7 +94,13 @@
                 android:screenOrientation="portrait"
                 android:theme="@style/Theme.Transparent">
         </activity>
-        <activity android:name=".view.quiz.QuizAnswerActivity"
+        <activity
+                android:name=".view.quiz.QuizAnswerActivity"
+                android:launchMode="singleInstance"
+                android:screenOrientation="portrait"
+                android:theme="@style/Theme.Transparent">
+        </activity>
+        <activity android:name=".view.popup.LiveExitPopUpActivity"
                   android:launchMode="singleInstance"
                   android:screenOrientation="portrait"
                   android:theme="@style/Theme.Transparent">
