Quiz Activity에서 3문제 풀고 나면 3초 뒤에 3문제를 풀었다는 팝업 액티비티 뜨게 성공 ViewPager 라디오 아이템 갯수만큼 높이 줄어들도록 구현 완료. youtube 동영상 코드 받아오는 통신 연결

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,7 +100,13 @@
                 android:screenOrientation="portrait"
                 android:theme="@style/Theme.Transparent">
         </activity>
-        <activity android:name=".view.popup.LiveExitPopUpActivity"
+        <activity
+                android:name=".view.popup.LiveExitPopUpActivity"
+                android:launchMode="singleInstance"
+                android:screenOrientation="portrait"
+                android:theme="@style/Theme.Transparent">
+        </activity>
+        <activity android:name=".view.popup.LiveFinishPopUpActivity"
                   android:launchMode="singleInstance"
                   android:screenOrientation="portrait"
                   android:theme="@style/Theme.Transparent">
